--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,10 @@
 html,
 body {
+  --tw-text-opacity: 1;
+  color: rgba(236, 236, 241, var(--tw-text-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(52, 53, 65, var(--tw-bg-opacity));
+
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
